src/objects/LBI__Recommendation__c.object
<CustomObject>
    <fields>
        <fullName>LBI__AccountExtension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Extension</label>
        <referenceTo>LBI__AccountExtension__c</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__ActivitiesTaken__c</fullName>
        <formula>IF(ISBLANK(LBI__LastEmailDatetime__c), &apos;&apos;,
IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/action-email-taken.png&apos;, &apos;Email Sent &apos;+TEXT(LBI__LastEmailDatetime__c)) + &apos; &apos;
)
+
IF(ISBLANK(LBI__LastCallDatetime__c),&apos;&apos;,
IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/action-call-taken.png&apos;, &apos;Call Created &apos;+TEXT(LBI__LastCallDatetime__c) ) + &apos; &apos;
)
+
IF(ISBLANK(LBI__LastTaskDatetime__c), &apos;&apos;,
IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/action-task-taken.png&apos;, &apos;Task Created &apos;+TEXT(LBI__LastTaskDatetime__c)) + &apos; &apos;
)
+
IF(ISBLANK(LBI__LastEventDatetime__c), &apos;&apos;,
IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/action-event-taken.png&apos;, &apos;Event Created &apos;+TEXT(LBI__LastEventDatetime__c)) + &apos; &apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activities Taken</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__AgeInDays__c</fullName>
        <formula>TEXT(FLOOR(NOW() - CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age in Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__CampaignId__c</fullName>
        <formula>LBI__Campaign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Lattice Recommendations</relationshipLabel>
        <relationshipName>Lattice_Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__CompanyName__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__DaysIdle__c</fullName>
        <formula>TODAY() - DATEVALUE( LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Idle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__DaysSinceDisqualification__c</fullName>
        <formula>today() -  DATEVALUE(  LBI__DisqualificationDate__c  )</formula>
        <label>Days since Disqualification</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__DaysToConversion__c</fullName>
        <formula>LBI__QualifiedDate__c -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Conversion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisplayName__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualificationDate__c</fullName>
        <label>Disqualification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualificationReasonDetails__c</fullName>
        <label>Disqualification Reason Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LBI__DisqualificationReason__c</fullName>
        <label>Disqualification Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LBI__ExpiredDate__c</fullName>
        <label>Expired Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__FilteredAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field populates Account if and only if Recommendations values are in either Open or In Progress</description>
        <inlineHelpText>This field populates Account if and only if Recommendations values are in either Open or In Progress</inlineHelpText>
        <label>Filtered Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>OpenandInProgressRecommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__IsContactFromAPI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contact From API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__IsNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is New</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the various recommendation VF pages to enable simple record selection.  Not needed on standard UI.</description>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LastActivityId__c</fullName>
        <label>Last Activity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LastActivityType__c</fullName>
        <label>Last Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__LastCallDatetime__c</fullName>
        <label>Last Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LastDispositionDate__c</fullName>
        <label>Last Disposition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LastDispositionedBy__c</fullName>
        <label>Last Dispositioned By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LastEmailDatetime__c</fullName>
        <label>Last Email Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LastEventDatetime__c</fullName>
        <label>Last Event Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LastTaskDatetime__c</fullName>
        <label>Last Task Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeAccountId__c</fullName>
        <description>This matches LEAccountExternalID in the API</description>
        <label>Lattice Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LaunchRunId__c</fullName>
        <label>Launch Run Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LeadId__c</fullName>
        <formula>LBI__Lead__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__Likelihood__c</fullName>
        <label>Lattice Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__LinkedToOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Linked To Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__ModelId__c</fullName>
        <label>Model Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__MonetaryValue__c</fullName>
        <label>Est. Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LBI__Name__c</fullName>
        <formula>HYPERLINK(&apos;javascript:viewRecommendation(&quot;&apos; + Id +&apos;&quot;,&quot;&apos; + LBI__DisplayName__c +&apos;&quot;);&apos;, LBI__DisplayName__c, &apos;_self&apos;)</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 AND 3)</booleanFilter>
            <errorMessage>Recommendation&apos;s Account must match Opportunity&apos;s Account.</errorMessage>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.LBI__Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Closed Won</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Closed Lost</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Lattice Recommendations</relationshipLabel>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__OwnerName__c</fullName>
        <formula>IF(NOT(ISBLANK(Owner:User.FirstName + Owner:User.LastName)), Owner:User.FirstName + &apos; &apos; + Owner:User.LastName,  Owner:Queue.QueueName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayAccountKey__c</fullName>
        <description>Composite field that is made up of PlayID--AccountID. Used to determine &quot;unique&quot; recommendations</description>
        <label>Play Account Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayId__c</fullName>
        <formula>LBI__Play__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayName__c</fullName>
        <formula>LBI__Play__r.LBI__DisplayName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayRun__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Play Run</label>
        <referenceTo>LBI__PlayRun__c</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeIcon__c</fullName>
        <formula>CASE(LOWER(LBI__PlayTypeName__c)
, &quot;upsell&quot;, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-upsell.png&apos;, &apos;Upsell&apos;)
, &quot;prospecting&quot;, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-prospecting.png&apos;, &apos;Prospecting&apos;)
, &quot;new-prospect&quot;, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-prospecting.png&apos;, &apos;Prospecting&apos;)
, &quot;renewal&quot;, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-renew.png&apos;, &apos;Renewal&apos;)
, &quot;cross-sell&quot;, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-cross-sell.png&apos;, &apos;Cross-Sell&apos;)
, IMAGE(&apos;/resource/&apos;+$Setup.LBI__GlobalSettings__c.LBI__Namespace__c+&apos;Icons/playType-other.png&apos;, &apos;Other&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommendation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeNameClass__c</fullName>
        <formula>CASE(LOWER(LBI__PlayTypeName__c)
, &quot;upsell&quot;, &quot;upsell&quot;
, &quot;prospecting&quot;, &quot;new-prospect&quot;
, &quot;new-prospect&quot;, &quot;new-prospect&quot;
, &quot;renewal&quot;, &quot;renewal&quot;
, &quot;cross-sell&quot;, &quot;cross-sell&quot;
, &quot;other&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Play Type Name Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PlayTypeName__c</fullName>
        <formula>LBI__Play__r.LBI__PlayType__r.LBI__PlayTypeName__c</formula>
        <label>Play Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__Play__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Play</label>
        <referenceTo>LBI__Play__c</referenceTo>
        <relationshipName>Recommendations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LBI__PreLeadId__c</fullName>
        <externalId>true</externalId>
        <label>PreLead Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__PriorityId__c</fullName>
        <label>Priority Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__QualifiedDate__c</fullName>
        <label>Qualified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LBI__Rank__c</fullName>
        <label>Lattice Rating</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RecommendationAccountId__c</fullName>
        <label>Recommendation Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RowNumber__c</fullName>
        <label>Row Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__WorkflowSettingId__c</fullName>
        <formula>LBI__PlayRun__r.LBI__LatticeWorkflowSetting__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow Setting Id</label>
        <type>Text</type>
    </fields>
    <label>Lattice Recommendation</label>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__Play__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__Disqualified_Recommendations</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__DisqualificationReason__c</columns>
        <columns>LBI__DisqualificationDate__c</columns>
        <columns>LBI__Play__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <label>Disqualified Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__Expired_Recommendations</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__ExpiredDate__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Expired</value>
        </filters>
        <label>Expired Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__In_Progress_Recommendations</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>In Progress Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__Lead_Based_Recommendations</fullName>
        <columns>LBI__Lead__c</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Opportunity__c</columns>
        <columns>LBI__Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Lead__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <label>Lead Based Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__Open_Recommendations</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__DisplayName__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Status__c</columns>
        <columns>LBI__Play__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__Qualified_Recommendations</fullName>
        <columns>LBI__Opportunity__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LBI__PlayTypeName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Qualified</value>
        </filters>
        <label>Qualified Recommendations</label>
    </listViews>
    <listViews>
        <fullName>LBI__RecentlyDisqualified</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__DisqualificationDate__c</columns>
        <columns>LBI__DisqualificationReason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Disqualified</value>
        </filters>
        <filters>
            <field>LBI__DaysSinceDisqualification__c</field>
            <operation>lessThan</operation>
            <value>7</value>
        </filters>
        <label>Recently Disqualified</label>
    </listViews>
    <listViews>
        <fullName>LBI__Recommendation_Based_Workflow</fullName>
        <columns>LBI__Name__c</columns>
        <columns>LBI__Account__c</columns>
        <columns>LBI__Opportunity__c</columns>
        <columns>LBI__Play__c</columns>
        <columns>LBI__Rank__c</columns>
        <columns>LBI__Likelihood__c</columns>
        <columns>LBI__MonetaryValue__c</columns>
        <columns>LBI__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__Lead__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>LBI__Status__c</field>
            <operation>equals</operation>
            <value>Open,In Progress</value>
        </filters>
        <label>Recommendation Based Workflow</label>
    </listViews>
    <nameField>
        <displayFormat>REC-{00000000}</displayFormat>
        <label>Recommendation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>